--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
 
 img {
   width: 100%;
+  height: 100%;
   max-width: 100%;
 }
 
@@ -19,6 +20,11 @@ h1, h2, h3, h4, h5 {
 
 a {
   text-decoration: none;
+}
+
+ul {
+  list-style-type: none;
+  list-style: none;
 }
 
 /* Fonts */
